# sspilib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.py
.github/workflows/: ci.yml
build_helpers/: cibuildwheel-before-all.sh  lib.sh
docs/: conf.py  index.rst  sspi.md  sspi.raw.md
src/sspi/: __init__.py  _context_attributes.pyi  _context_attributes.pyx  _credential.pxd  _credential.py  _credential.pyi  _credential.pyx  _credential_attributes.pyi  _credential_attributes.pyx  _message.pyi  _message.pyx  _ntstatus.pxd  _ntstatus.pyi  _query_context.pyi  _query_context.pyx  _sec_context.py  _security_buffer.pxd  _security_buffer.pyi  _security_buffer.pyx  _security_context.pxd  _security_context.pyi  _security_context.pyx  _security_package.pxd  _security_package.pyi  _security_package.pyx  _text.pxd  _text.pyx  _win32_types.pxd  _winerror.py
src/sspi/raw/: _context_attributes.pyi  _context_attributes.pyx  _credential.pxd  _credential.pyi  _credential.pyx  _credential_attributes.pyi  _credential_attributes.pyx  _security_context.pyi  _security_context.pyx  _security_package.pxd  _security_package.pyi  _security_package.pyx  _win32_types.pxd
src/sspic/: __init__.py  _credential.py  _filetime.py  _sec_context.py
src/sspic/raw/: __init__.py  _credential.pyx  _message.pyi  _security_buffer.pxd  _security_context.pxd  _text.pxd  _text.pyx  _win32_types.pxd  python_sspi.h
src/sspilib/: __init__.py  _credential.py  _sec_context.py
src/sspilib/raw/: __init__.py  _context_attributes.pyi  _credential.pyi  _credential.pyx  _credential_attributes.pyi  _message.pyx  _ntstatus.pxd  _ntstatus.pyx  _security_buffer.pyi  _security_context.pyi  _text.pyx  _win32_types.pxd  python_sspi.h
tests/: conftest.py  test_context_attributes.py  test_credential.py  test_credential_attributes.py  test_message.py  test_query_context.py  test_sec_context.py  test_security_buffer.py  test_security_context.py  test_security_package.py
tests/raw/: test_context_attributes.py  test_credential.py  test_credential_attributes.py  test_message.py  test_security_buffer.py  test_security_context.py  test_security_package.py
