[build-system]
requires = [
    "Cython >= 3.0.0, < 4.0.0",
    "setuptools >= 77.0.0", # license and license-files alignment
]
build-backend = "setuptools.build_meta"

[project]
name = "sspilib"
version = "0.3.1"
description = "SSPI API bindings for Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jordan Borean", email = "jborean93@gmail.com" }
]
keywords = ["sspi", "kerberos", "negotiate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
homepage = "https://github.com/jborean93/sspilib"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sspilib = ["py.typed"]
"sspilib.raw" = ["*.pyi"]

[tool.setuptools.exclude-package-data]
"sspilib.raw" = ["*.h", "*.pxd", "*.pyx"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "setup.py|build/"
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs"
show_error_codes = true
show_column_numbers = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--import-mode=importlib"

[tool.cibuildwheel]
build-frontend = "build"

[tool.cibuildwheel.linux]
before-all = "build_helpers/cibuildwheel-before-all.sh"

[tool.cibuildwheel.macos]
before-all = "build_helpers/cibuildwheel-before-all.sh"

[tool.cibuildwheel.linux.environment]
CPATH = "/tmp/DevolutionsSspi/include"
LIBRARY_PATH = "/tmp/DevolutionsSspi/lib"
LD_LIBRARY_PATH = "/tmp/DevolutionsSspi/lib"

[tool.cibuildwheel.macos.environment]
CPATH = "/tmp/DevolutionsSspi/include"
LIBRARY_PATH = "/tmp/DevolutionsSspi/lib"
DYLD_FALLBACK_LIBRARY_PATH = "/tmp/DevolutionsSspi/lib"
